force-app/main/default/objects/Customer__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch_Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>