force-app/main/default/objects/Customer__c/fields/CDM_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>CDM_Status_Code__c</fullName>
    <label>CDM Status Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>