force-app/main/default/objects/Customer__c/fields/corporate_address_line_4__c.field-meta.xml
<CustomField>
    <fullName>corporate_address_line_4__c</fullName>
    <label>Corporate Address Line 4</label>
    <length>240</length>
    <type>Text</type>
</CustomField>