force-app/main/default/objects/Customer__c/fields/Corporate_City__c.field-meta.xml
<CustomField>
    <fullName>Corporate_City__c</fullName>
    <label>Corporate City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>