force-app/main/default/objects/Customer__c/fields/Corporate_Country__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Country__c</fullName>
    <label>Corporate Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>