force-app/main/default/objects/Customer__c/fields/Corporate_Latitude_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Latitude_Geocode__c</fullName>
    <label>Corporate Latitude Geocode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>