force-app/main/default/objects/Customer__c/fields/Corporate_Longitude_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Longitude_Geocode__c</fullName>
    <label>Corporate Longitude Geocode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>