force-app/main/default/objects/Customer__c/fields/Corporate_State__c.field-meta.xml
<CustomField>
    <fullName>Corporate_State__c</fullName>
    <label>Corporate State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>