force-app/main/default/objects/Customer__c/fields/Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Requested__c</fullName>
    <label>Credit Limit Requested</label>
    <length>30</length>
    <type>Text</type>
</CustomField>