force-app/main/default/objects/Customer__c/fields/FI_Type__c.field-meta.xml
<CustomField>
    <fullName>FI_Type__c</fullName>
    <label>FI Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>