force-app/main/default/objects/Customer__c/fields/NCR_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>NCR_Sub_Industry__c</fullName>
    <label>NCR Sub-Industry</label>
    <length>60</length>
    <type>Text</type>
</CustomField>