force-app/main/default/objects/Customer__c/fields/NCR_Tiering__c.field-meta.xml
<CustomField>
    <fullName>NCR_Tiering__c</fullName>
    <label>NCR Tiering</label>
    <length>30</length>
    <type>Text</type>
</CustomField>