force-app/main/default/objects/Customer__c/fields/Parent_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer_Number__c</fullName>
    <label>Parent Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>