force-app/main/default/objects/Customer__c/validationRules/Customer_Fields_Non_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Fields_Non_editable</fullName>
    <active>true</active>
    <description>Customer Fields will be readonly in salesfoce as per CDM Design</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &apos;Soup Integration&apos;</errorConditionFormula>
    <errorDisplayField>Batch_Number__c</errorDisplayField>
    <errorMessage>CDM related Customer Details Are Non Editable in Salesforce.If you want to make any update on it then it must be updated in CDM portal</errorMessage>
</ValidationRule>